Hopefully fixes jumping header

--- a/app/assets/stylesheets/vvz/topbar.css.scss
+++ b/app/assets/stylesheets/vvz/topbar.css.scss
@@ -114,6 +114,10 @@
     }
   }
 
+  #logo {
+    float: left;
+  }
+
   #topbar nav .login {
     margin-left: 2em;
     border: 0;
